@@ -1,3 +1,7 @@
+[B]3.2.4[/B]
+- More bug fixes for vipsubs.gr (failure to load nested zip on Android)
+- Removed builtin methods from other provides
+
 [B]3.2.3[/B]
 - Bug fixes for vipsubs.gr
 
